--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ services:
 env:
   matrix:
     - DISTRO=ubuntu_mpi BUILD_TYPE=Debug DOCKERHUB=true
-    - DISTRO=fedora_mpi BUILD_TYPE=Release DOCKERHUB=true
+#    - DISTRO=fedora_mpi BUILD_TYPE=Release DOCKERHUB=true
 
 before_install:
  - git fetch --unshallow && git fetch --tags #for versioning
 
 script:
  - if [[ ${CC} != gcc ]]; then TAG="_${CC}"; fi
- - if [[ ${TRAVIS_BRANCH} != stable ]]; then TAG="${TAG}_master"; fi
+ - if [[ ${TRAVIS_BRANCH} != stable ]]; then TAG="${TAG}_${TRAVIS_BRANCH}"; fi
  - cp -vr docker ${HOME}/docker
  - sed -i "1s/fedora_serial/${DISTRO}${TAG}/" ${HOME}/docker/Dockerfile
  - cd ../../
